Fixing author & company

--- a/src/TeslaApi.csproj
+++ b/src/TeslaApi.csproj
@@ -9,6 +9,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Jon R. Helms</Authors>
+    <Version>1.0.1</Version>
+    <Company>PintSize.Me</Company>
+    <PackageProjectUrl>https://github.com/skipfire/TeslaApi</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
