--- a/src/TeslaApi.csproj
+++ b/src/TeslaApi.csproj
@@ -14,6 +14,8 @@
     <Company>PintSize.Me</Company>
     <PackageProjectUrl>https://github.com/skipfire/TeslaApi</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/skipfire/TeslaApi</RepositoryUrl>
+    <Description />
   </PropertyGroup>
 
   <ItemGroup>
