--- a/src/TeslaApi.csproj
+++ b/src/TeslaApi.csproj
@@ -10,12 +10,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Jon R. Helms</Authors>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <Company>PintSize.Me</Company>
     <PackageProjectUrl>https://github.com/skipfire/TeslaApi</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/skipfire/TeslaApi</RepositoryUrl>
-    <Description />
+    <Description>Light C# API for accessing Tesla vehicle data.</Description>
   </PropertyGroup>
 
   <ItemGroup>
