--- a/src/TeslaApi.csproj
+++ b/src/TeslaApi.csproj
@@ -10,17 +10,17 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Jon R. Helms</Authors>
-    <Version>1.0.7</Version>
+    <Version>1.0.8</Version>
     <Company>PintSize.Me</Company>
     <PackageProjectUrl>https://github.com/skipfire/TeslaApi</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/skipfire/TeslaApi</RepositoryUrl>
-    <Description>Light C# API for accessing Tesla vehicle data.</Description>
+    <Description>Light package for accessing Tesla vehicle data.</Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="SplunkIt" Version="1.0.0" />
+    <PackageReference Include="SplunkIt" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
