--- a/src/TeslaApi.csproj
+++ b/src/TeslaApi.csproj
@@ -10,12 +10,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Jon R. Helms</Authors>
-    <Version>1.0.10</Version>
+    <Version>1.0.12</Version>
     <Company>PintSize.Me</Company>
     <PackageProjectUrl>https://github.com/skipfire/TeslaApi</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/skipfire/TeslaApi</RepositoryUrl>
     <Description>Light package for accessing Tesla vehicle data.</Description>
+    <AssemblyVersion>1.0.12.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
